--- a/views/client/partials/sider.pug
+++ b/views/client/partials/sider.pug
@@ -31,4 +31,4 @@ aside.bg-black.p-4.flex-none.pt-10(style="width: 10%")
             li.mb-4
                 a.text-lg(href="#") Setting
             li.mb-4
-                a.text-lg(href="#") Log out
+                a.text-lg(href="/user/logout") Log out
